YUI: hybrid brain, memory, and robust confirmations

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,57 @@ YUI_LLM_BASE_URL=https://api.deepseek.com
 YUI_LLM_MODEL=deepseek-chat
 YUI_LLM_MODEL_FAST=deepseek-chat
 YUI_LLM_MODEL_DEEP=deepseek-reasoner
+YUI_LLM_MODE=auto
 YUI_LLM_TEMPERATURE=0.4
 YUI_LLM_DEEP_TEMPERATURE=0.2
+YUI_LLM_MAX_TOKENS=240
+YUI_STRIP_STAGE_DIRECTIONS=1
+
+# Hybrid brain: estilo (aprende tus preferencias)
+YUI_STYLE_ENABLED=1
+YUI_STYLE_MAX_SENTENCES=3
+# Frases exactas a evitar, separadas por coma o |
+YUI_STYLE_BANNED_PHRASES=
+
+# Hybrid brain: atajos ("cuando diga X, ejecuta Y")
+YUI_MACROS_ENABLED=1
+
+# Modo enseñanza especial (más detalle en texto; voz sigue corta)
+YUI_TEACHING_MODE=0
+YUI_TEACHING_PRINT_FULL=1
+
+# Desktop automation (confirma acciones sensibles)
+YUI_DESKTOP_ENABLED=0
+YUI_DESKTOP_CONFIRM_TIMEOUT_S=60
+# Confirmación segura (código + voz)
+YUI_CONFIRM_CODE_DIGITS=6
+YUI_CONFIRM_VOICE_ONLY=1
+YUI_CONFIRM_CANCEL_VOICE_ONLY=0
+YUI_CONFIRM_ALLOW_NONCE=0
+# Fallback 2FA: "confirmar por texto" y luego escribir el código
+YUI_CONFIRM_TEXT_ARM_ENABLED=1
+YUI_CONFIRM_TEXT_ARM_WINDOW_S=30
+# Si no quieres que YUI lea el código en voz alta (siempre se imprime y se envía a la UI).
+YUI_CONFIRM_SPEAK_CODE=1
+# Confirmar primer uso de mouse/scroll durante tareas grabadas
+YUI_DESKTOP_CONFIRM_POINTER=1
+YUI_DESKTOP_POINTER_GRACE_S=60
+
+# Screen context + embeddings (no guarda imágenes)
+YUI_SCREEN_CONTEXT_ENABLED=1
+YUI_SCREEN_CONTEXT_MAX_TITLE=80
+YUI_SCREEN_EMBEDDINGS_ENABLED=1
+YUI_SCREEN_EMBED_W=32
+YUI_SCREEN_EMBED_H=18
+YUI_SCREEN_KNN_K=3
+YUI_SCREEN_KNN_MAX_DISTANCE=6.5
+
+# Grabador de tareas (requiere pip install pynput)
+YUI_RECORDER_ENABLED=1
+YUI_RECORDER_SAVE_SCREEN_CONTEXT=1
+YUI_RECORDER_WAIT_MIN_S=0.45
+# No recomendado: puede capturar datos sensibles.
+YUI_RECORDER_CAPTURE_TEXT=0
 
 # Voice / mic
 YUI_STT_BACKEND=auto
@@ -12,15 +61,79 @@ YUI_MIC_INDEX=-1
 YUI_SOUNDDEVICE_INDEX=-1
 YUI_WAKE_WORD_ENABLED=1
 YUI_WAKE_WORD=yui
+YUI_WAKE_LISTEN_TIMEOUT_S=2
+YUI_WAKE_PHRASE_TIME_LIMIT_S=2.5
+YUI_WAKE_FOLLOWUP_S=12
+# Si no quieres "hotmic" (sin wake word), pon esto en 0.
+YUI_WAKE_MISS_TO_HOTMIC=3
+YUI_WAKE_HOTMIC_S=10
 YUI_ALLOW_TEXT_INPUT=1
 YUI_LISTEN_TIMEOUT_S=4
 YUI_PHRASE_TIME_LIMIT_S=6
+YUI_VOICE_ACK_ENABLED=1
+# beep (rápido) | tts (dice una palabra corta)
+YUI_VOICE_ACK_STYLE=beep
+YUI_VOICE_ACK_TEXT=Ajá.
+YUI_VOICE_ACK_COOLDOWN_S=1.6
+YUI_VOICE_ACK_BEEP_HZ=900
+YUI_VOICE_ACK_BEEP_MS=120
+YUI_IDLE_SLEEP_S=0.05
+YUI_DEBUG_STT=0
+YUI_DEBUG_LATENCY=0
+YUI_LOG_PATH=data/yui.log
+YUI_PAUSE_ON_CRASH=1
+YUI_SINGLE_INSTANCE=1
+YUI_LOCK_PATH=data/yui.lock
+
+# System profile / autotune (ajusta rendimiento según tu PC)
+YUI_ENV_PROFILE=1
+YUI_AUTOTUNE=1
+YUI_PROFILE_PRINT=1
+YUI_PROFILE_CACHE_PATH=data/system_profile.json
+YUI_PROFILE_MAX_AGE_S=86400
+YUI_PROFILE_EXTENDED=0
+YUI_SR_AMBIENT_NOISE_S=0.15
+YUI_SR_CALIBRATE_EVERY_S=45
+# VAD (sounddevice): ajusta si le cuesta detectar tu voz o corta muy tarde.
+YUI_SD_BLOCK_S=0.1
+YUI_SD_NOISE_BLOCKS=3
+YUI_SD_MIN_SPEECH_BLOCKS=2
+YUI_SD_TRAILING_SILENCE_BLOCKS=5
+YUI_SD_SPEECH_RMS_MIN=120
+YUI_SD_SILENCE_RMS_MIN=80
+YUI_SD_SPEECH_RMS_MULT=3.0
+YUI_SD_SILENCE_RMS_MULT=1.6
 YUI_TTS_ENGINE=edge
 YUI_TTS_VOICE=es-MX-DaliaNeural
 YUI_TTS_EDGE_RATE=+0%
 YUI_TTS_EDGE_VOLUME=+0%
+YUI_TTS_EDGE_PITCH=+0Hz
+# edge-tts escapa SSML; mantener en 0 (solo texto).
+YUI_TTS_USE_SSML=0
+YUI_TTS_CONTEXTUAL=1
+YUI_TTS_PYGAME_VOLUME=1.0
+YUI_DEBUG_TTS=0
+
+# Security guard (previene abrir URLs/archivos riesgosos sin confirmación)
+YUI_SECURITY_GUARD=1
+YUI_SECURITY_REQUIRE_HTTPS=1
+# dominios separados por coma (ej: example.com,bad.com)
+YUI_SECURITY_URL_BLOCKLIST=
+
+# Security watch (monitoreo defensivo, solo lectura)
+YUI_SECURITY_WATCH_ENABLED=1
+YUI_SECURITY_WATCH_INTERVAL_S=30
+YUI_SECURITY_WATCH_SPEAK=1
+YUI_SECURITY_WATCH_ANNOUNCE=0
+YUI_SECURITY_WATCH_HEALTH_EVERY_S=300
+YUI_SECURITY_WATCH_HOSTS_EVERY_S=180
+YUI_SECURITY_PRIVACY_WATCH_ENABLED=1
+YUI_SECURITY_PRIVACY_IGNORE=python.exe,pythonw.exe
+YUI_SECURITY_PRIVACY_NOTIFY_ON_START=1
 
 # Camera / vision
+YUI_VISION_ENABLED=1
+YUI_PREVIEW=1
 YUI_CAMERA_BACKEND=auto
 YUI_CAMERA_INDEX=-1
 YUI_CAMERA_FOURCC=MJPG
@@ -32,15 +145,19 @@ YUI_VISION_DEBUG=1
 YUI_PREVIEW_WIDTH=480
 YUI_PREVIEW_HEIGHT=270
 YUI_MIC_METER_ENABLED=1
+YUI_MIC_METER_PAUSE_DURING_STT=1
 
 # Hand detection / gestures
 YUI_HAND_DET_CONF=0.5
 YUI_HAND_PRES_CONF=0.5
 YUI_HAND_TRACK_CONF=0.5
+YUI_HAND_MIN_BBOX_AREA=0.02
 YUI_GESTURE_RECOGNIZER=1
 YUI_GESTURE_MIN_SCORE=0.55
+YUI_GESTURE_MIN_SCORE_THUMBS_UP=0.85
 YUI_GESTURE_STABLE_FRAMES=4
 YUI_GESTURE_STABLE_MIN=3
+YUI_GESTURE_USE_HEURISTICS=0
 YUI_GESTURE_REACTIONS=0
 
 # Memory
@@ -49,7 +166,11 @@ YUI_MEMORY_LONG_FACTS=20
 YUI_MEMORY_USE_SUMMARIES=1
 YUI_MEMORY_USE_LONG_TERM=1
 YUI_MEMORY_RETRIEVE_K=6
+YUI_MEMORY_MIN_QUERY_TOKENS=3
+YUI_MEMORY_MIN_SCORE=0.12
 YUI_MEMORY_EXTRACT_EVERY_N=8
+YUI_DEBUG_MEMORY=0
+YUI_MEMORY_ASYNC=1
 
 # Learning (face/hand)
 YUI_FACE_EMOTION_THRESHOLD=0.55
